--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="assets/css/switcher.css">
     <link rel="stylesheet" href="assets/css/clock.css">
     <link rel="stylesheet" id="switcher-id" href="">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
     <script src="assets/js/digitalClock.js"></script>
 </head>
 <body>
