--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="PT-pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="HandheldFriendly" content="true">
     <title>Digital Clock</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
@@ -17,7 +19,7 @@
   <div class="wrapper">
   <main>
     <header class="message">
-      <div class="message">
+      <div>
         <p id="message">Estamos adicionando calendários pra você!</p>
       </div>
     </header>
